--- a/views/user/about_us.ejs
+++ b/views/user/about_us.ejs
@@ -5,10 +5,10 @@
   <div class="container-fluid" >
 
     <div class="row">
-        <div class="col-12 padding-1 background-1a navbar_container" ></div>
+        <div class="col-12 background-1a navbar_container" ></div>
     </div>
 
-    <div class="showcase-container relative width-100">
+    <div class="showcase_container">
       <%- include("./layout/new_showcase.ejs") %>
     </div>
 
@@ -16,10 +16,9 @@
     <%- include("./layout/about/values.ejs") %>
     <%- include("./layout/about/what_we_do.ejs") %>
 
-
   </div>
 
-  <div class="margin-top-5-neg infinite-z relative" >
+  <div class="margin-top-small-neg" >
     <%- include("./layout/footer.ejs") %>
   </div>
 
