--- a/views/user/contact_us.ejs
+++ b/views/user/contact_us.ejs
@@ -2,19 +2,19 @@
 
   <div id="wrapper" class="<%=lock %> ">
 
-    <div class="container-fluid home_page padding-bottom-75" >
+    <div class="container-fluid page" >
 
       <div class="row">
-          <div class="col-12 padding-1 navbar_container" >  </div>
+          <div class="col-12 navbar_container" >  </div>
       </div>
 
-      <div class="showcase-container relative width-100">
+      <div class="showcase_container">
         <%- include("./layout/new_showcase.ejs") %>
       </div>
 
       <%- include("./layout/contact/meet_the_owners.ejs") %>
 
-      <div class="our_clients_contact_wrapper relative">
+      <div class="our_clients_contact_wrapper">
 
         <img class = "wave_contact_img" src = "./../assets/images/wave_l.png"/>
 
@@ -28,7 +28,7 @@
 
   </div>
 
-  <div class="margin-top-5-neg">
+  <div class="margin-top-small-neg">
     <%- include("./layout/footer.ejs") %>
   </div>
 
