--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -10,7 +10,7 @@
             <div class="col-12 navbar_container"></div>
         </div>
 
-        <div class="showcase_home_container">
+        <div class="showcase_container">
 
           <%- include("./layout/new_showcase.ejs") %>
 
