--- a/views/user/layout/about/values.ejs
+++ b/views/user/layout/about/values.ejs
@@ -1,5 +1,5 @@
 
-    <div class="row value_row about_value_row">
+    <div class="row value_row">
 
       <div class="col-1 mobile-col-0"></div>
 
@@ -7,7 +7,7 @@
 
         <div class="value_inner_row row ">
 
-            <div class="col-3">
+            <div class="col-3 value_col">
 
                 <div class="value_box">
 
@@ -29,7 +29,7 @@
 
             </div>
 
-            <div class="col-3">
+            <div class="col-3 value_col">
 
 
                 <div class="value_box">
@@ -51,7 +51,7 @@
 
             </div>
 
-            <div class="col-3">
+            <div class="col-3 value_col">
 
 
                 <div class="value_box">
@@ -73,7 +73,7 @@
 
             </div>
 
-            <div class="col-3">
+            <div class="col-3 value_col">
 
                 <div class="value_box">
 
