--- a/views/user/layout/about/what_we_do.ejs
+++ b/views/user/layout/about/what_we_do.ejs
@@ -4,7 +4,7 @@
 
         <div class="row">
 
-          <div class="col-5 what_we_do_col mobile-col-6_">
+          <div class="col-5 what_we_do_col mobile-col-12">
 
             <br />
             <br />
@@ -15,17 +15,17 @@
                   A business that looks well maintained is successful. Our company specializes in cleaning windows and patios to lessen your workload while making your business aesthetic look in top shape. Our services will be cost-effective to you and we are very flexible in our scheduling so we can come at the best days for you.  Once you hire us, you can trust we will fully take care of any problem and spend time around the clock to make sure you can spend time on the things that matter the most.
               </p>
 
-              <div class="row margin-top-5">
-                  <div class="col-4 mobile-col-6">
-                      <a href="/quote"class="normal_link"><p class="link_about " > Free Quote </p></a>
+              <div class="row margin-top-small about_link_row">
+                  <div class="col-4 mobile-col-12">
+                      <a href="/quote"class="what_we_do_normal_link"><p class="what_we_do_link " > Free Quote </p></a>
                   </div>
 
-                  <div class="col-4 mobile-col-6">
-                      <a href="/#our_clients">  <p class="link_about   "> Contact Us </p></a>
+                  <div class="col-4 mobile-col-12">
+                      <a href="/#our_clients">  <p class="what_we_do_link   "> Contact Us </p></a>
                   </div>
 
-                  <div class="col-4 mobile-col-6">
-                    <a href="/#our_clients"class="normal_link"><p class="link_about  "> Our Work </p></a>
+                  <div class="col-4 mobile-col-12">
+                    <a href="/#our_clients"class="what_we_do_normal_link"><p class="what_we_do_link  "> Our Work </p></a>
                   </div>
 
               </div>
