--- a/views/user/layout/contact/what_we_do.ejs
+++ b/views/user/layout/contact/what_we_do.ejs
@@ -4,7 +4,7 @@
 
         <p class="text-banner work_heading" > What We Clean </p>
 
-        <div class="row margin-top-small">
+        <div class="row margin-top-small work_row">
 
           <div class="col-6 mobile-col-12 landscape-col-6 work_col">
 
