--- a/views/user/layout/head.ejs
+++ b/views/user/layout/head.ejs
@@ -20,10 +20,12 @@
 
       <link rel="stylesheet" type="text/css" href="./assets/css/contact.css" />
       <link rel="stylesheet" type="text/css" href="./assets/css/cfs_modal.css" />
-        <link rel="stylesheet" type="text/css" href="./assets/css/icon-font.css" />
+      <link rel="stylesheet" type="text/css" href="./assets/css/icon-font.css" />
       <link rel="stylesheet" type="text/css" href="./assets/css/navbar.css" />
       <link rel="stylesheet" type="text/css" href="./assets/css/mobile_navbar.css" />
+
       <link rel="stylesheet" type="text/css" href= <%= showcase.css_file %> />
+
       <link rel="stylesheet" type="text/css" href="./assets/css/showcase.css" />
       <link rel="stylesheet" type="text/css" href="./assets/css/animations.css" />
       <link rel="stylesheet" type="text/css" href="./assets/css/top_clients.css" />
@@ -32,6 +34,10 @@
       <link rel="stylesheet" type="text/css" href="./assets/css/general.css" />
 
       <title><%= pageTitle %></title>
+
+      <style>
+  
+      </style>
 
     </head>
 
