--- a/views/user/layout/new_showcase.ejs
+++ b/views/user/layout/new_showcase.ejs
@@ -14,7 +14,7 @@
 
   </div>
 
-      <div class="intro-text-container ">
+      <div class="intro-text-container showcase_text_container">
 
           <div class="cfs-heading-background cfs-heading-background--1">
                 <p class="cfs-heading"><%= showcase.heading_1 %></p>
@@ -29,8 +29,8 @@
             <div class="col-12">
 
               <div class='row relative'>
-                <div class="col-12 dark-blue-background padding-2 mobile-padding-5"></div>
-                <div class="col-9 padding-2 light-blue-background mobile-padding-5"></div>
+                <div class="col-12 dark-blue-background padding-2 showcase_banner"></div>
+                <div class="col-9 padding-2 light-blue-background showcase_banner"></div>
               </div>
 
           </div>
