--- a/views/user/layout/our_clients.ejs
+++ b/views/user/layout/our_clients.ejs
@@ -6,7 +6,7 @@
 
     <% for(var i = 0; i < clients.length; i++){ %>
 
-        <div class="col-2 mobile-col-12 landscape-col-4 margin-top-very-small" >
+        <div class="col-2 mobile-col-6 landscape-col-4 margin-top-very-small client_col" >
           <img class="client_img   "src = "<%= './assets/images/' + clients[i].logo %>"/>
         </div>
 
