--- a/views/user/layout/quote_form.ejs
+++ b/views/user/layout/quote_form.ejs
@@ -4,7 +4,7 @@
 
       <div class="col-12">
 
-          <div class="quotesheet_container" >
+          <div class="quotesheet_container quotesheet_container_home" >
 
               <p class="quotesheet_title ">Make Your Windows Shine Today!</p>
 
@@ -12,7 +12,7 @@
 
               <div class="row padding-bottom-small">
 
-                  <div class="col-6 padding-top-small">
+                  <div class="col-6 padding-top-small form_col">
 
                       <label>
                           Full Name
@@ -25,17 +25,20 @@
                       </label>
 
                       <input class="form-control quote_input quote_input_home" name="address" placeholder="Enter Address" />
+
                       <label>
                           Zip Code
                       </label>
+
                       <input class="form-control quote_input quote_input_home" type="number"name="address" placeholder="Enter Zip Code" />
 
                   </div>
 
-                  <div class="col-6 padding-top-small">
+                  <div class="col-6 padding-top-small form_col">
                     <div class="row">
 
-                      <div class="col-4">
+                      <div class="col-4 form_col--inner">
+
                         <label>
                             Screen Count
                         </label>
@@ -44,7 +47,7 @@
 
                       </div>
 
-                  <div class="col-4">
+                  <div class="col-4 form_col--inner">
 
                     <label>
                         < 4X4 Ft
@@ -54,7 +57,7 @@
 
                   </div>
 
-                  <div class="col-4">
+                  <div class="col-4 form_col--inner">
 
                     <label>
                         4X4 to 8X8 Ft
@@ -64,7 +67,7 @@
 
                   </div>
 
-                  <div class="col-4 padding-top-5">
+                  <div class="col-4 padding-top-small form_col--inner">
 
                       <label>
                           > 8X8 Ft
