--- a/public/assets/css/contact.css
+++ b/public/assets/css/contact.css
@@ -20,6 +20,19 @@
   position: relative;
 
 }
+.margin-top-small-neg{
+  margin-top:-5%;
+}
+.our_clients_contact_wrapper{
+  position: relative;
+}
+.page{
+padding-bottom:75%
+}
+.showcase_container{
+  width:100%;
+  position: relative;
+}
 .work_image_banner--left{
   left:0;
 }
@@ -140,7 +153,7 @@
   padding: 5% 0%;
   position: relative;;
 }
-@media screen and (max-width:1000px){
+/* @media screen and (max-width:1000px){
   .meet_owners_container{
     margin-top:140% !important;
   }
@@ -160,8 +173,73 @@
     height:200px !important;
   }
 
-}
+} */
 
+
+@media screen and (max-width:680px){
+  .meet_owner_img{
+    height: 70%;
+    width: 50%;
+    margin-top:10%;
+    margin-left:25%;
+  }
+  .meet_owners_container{
+      margin-top:145%;
+  }
+  .meet_owner_banner{
+    width:80%;
+  }
+  .meet_owner_name{
+    text-align: center !important;
+    width:100%;
+  }
+  .meet_owner_description{
+    text-align: justify;
+    font-size: 2.5rem;
+    font-family: "Akrobat";
+    color:white;
+  }
+  .meet_owner_col{
+    width:100%;
+    flex:100%;
+    max-width:100%;
+  }
+  .our_client_banner{
+    width:95%;
+  }
+  .our_clients_contact_wrapper{
+    padding-top:20%;
+    padding-bottom:20%;
+  }
+  .wave_contact_img{
+    margin-top:30%;
+  }
+  .work_container{
+    margin-top:0%;
+  }
+  .work_heading{
+    width:75%;
+  }
+  .work_row{
+    margin-top:20%;
+  }
+  .work_col{
+    padding:0 !important;
+  }
+.work_image_banner{
+  bottom : 7.5%;
+  width:75%;
+  font-size:2.5rem !important
+}
+.client_col{
+  margin-top:10%;
+}
+.client_img{
+  width:90%;
+  margin-left:5%;
+}
+}
+/*
 @media screen and  (orientation:landscape) and (max-width:1000px){
     .landscape-col-6{
 
@@ -183,4 +261,4 @@
     .meet_owners_container{
       margin-top: 60% !important;
     }
-}
+} */
