--- a/views/user/layout/contact/meet_the_owners.ejs
+++ b/views/user/layout/contact/meet_the_owners.ejs
@@ -18,9 +18,11 @@
                 </div>
 
                 <div class="col-6 mobile-col-12 landscape-col-6 meet_owner_col--2 ">
-                  A business that looks well maintained is successful.
-                  Our company specializes in cleaning windows to lessen your workload while making your business aesthetic look in top shape. Our services will be cost-effective to you and we are very flexible in our scheduling so we can come at the best days for you.
-                  Once you hire us, you can trust we will fully take care of any problem and spend time around the clock to make sure you can spend time on the things that matter the most.
+                  <p class="meet_owner_description">
+                    A business that looks well maintained is successful.
+                    Our company specializes in cleaning windows to lessen your workload while making your business aesthetic look in top shape. Our services will be cost-effective to you and we are very flexible in our scheduling so we can come at the best days for you.
+                    Once you hire us, you can trust we will fully take care of any problem and spend time around the clock to make sure you can spend time on the things that matter the most.
+                  </p>
                 </div>
 
 
