--- a/views/user/layout/home/about.ejs
+++ b/views/user/layout/home/about.ejs
@@ -30,7 +30,7 @@
 
                   </div>
 
-                    <div class=" dropdown_container ghost">
+                    <div class="dropdown_container ghost">
 
                         <div className="divder_dropdown dropdown_divider"></div>
                         <p class="dropdown_text">
@@ -53,7 +53,7 @@
 
     <div class="col-1"></div>
 
-    <div class="col-6">
+    <div class="col-6 desktop_only">
 
         <div class="about_us_overlay_box"></div>
 
