--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -7,6 +7,7 @@
 }
 .about_us_row{
   position:relative;
+  z-index: 99220009;
 }
 .home_quote_container{
   position: absolute;
@@ -287,6 +288,12 @@
 
   text-align:left;
   width:50%;
+  font-size: 4.5rem !important;
+font-family: "montserrat";
+font-weight: 500;
+width:50% !important;
+text-align: left !important;
+padding-left: 5% !important;
 
 }
 .contact_info_section{
@@ -331,29 +338,34 @@ width:100%;
 
 }
 .about_us_link{
-  padding-top:5%;
+  padding-top:2.5%;
   font-family: "Akrobat";
   text-align: center;
   font-size:3.5rem;
+
   color:white;
 
 }
 .about_us_button{
   padding:2%;
   width:90%;
+
   text-align: center;
   margin-top:10%;
   margin-left:5%;
   padding-left:5% ;
-  margin-top:1%;
+  margin-top:2.5%;
   position:relative;
   z-index:9999
 }
 
 .contact_info_section--email{
-  text-align: left;
-  width:80%;
-  font-size:2rem;
+  font-size: 5rem !important;
+font-family: "montserrat";
+font-weight: 500;
+width:70% !important;
+text-align: left !important;
+padding-left: 5% !important;
 }
 .dropdown_arrow{
   width:50%;
@@ -385,7 +397,25 @@ width:100%;
 .gallery_row--3{
   position:relative;top:-50vh
 }
-
+.our_client_banner{
+  font-family: "montserrat";
+  font-weight: 500;
+  padding-left:10% !important;
+  text-transform: uppercase;
+  font-size:5rem !important;
+  width:45% !important;
+  text-align: left !important;
+}
+.contact_section_title{
+  font-family: "montserrat";
+  font-weight: 500;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  font-size:7rem !important;
+  width:65% !important;
+  text-align: left !important;
+  padding-left: 5% !important;
+}
 @media screen and (max-width:680px){
   .home_quote_container{
     top:125%;
