--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -32,16 +32,18 @@
 
         <div class="our_work_section ">
 
-            <div class="wavy_section">
+            <!-- <div class="wavy_section">
                 <div class = "wave background-006 "></div>
-            </div>
+            </div> -->
 
-        <div class="our_clients_container">
-          <%- include("./layout/our_clients.ejs") %>
+        <div class="our_clients_containers"style="background:#0069a">
+          <%- include("./layout/new_our_clients.ejs") %>
         </div>
       </div>
 
       <%- include("./layout/home/contact.ejs") %>
+
+
 
       <div class="gallery_home_container">
 
@@ -56,5 +58,7 @@
   </div>
 
 </div>
+
+<script src = "./assets/js/our_clients.js"></script>
 
   <%- include("./layout/end.ejs") %>
