--- a/views/user/layout/about/values.ejs
+++ b/views/user/layout/about/values.ejs
@@ -18,11 +18,9 @@
                     </p>
 
                     <p class="value_box_subtitle">
-                        We Care About the Planet
-                          We Care About the Planet
-                            We Care About the Planet
-                              We Care About the Planet
-                                We Care About the Planet  We Care About the Planet
+                        We only use products that are friendly to the planet and
+                        We will never use hard chemicals or wasteful products on the job and use products that are not only safe for the planet but also non-toxic for people and animals as well.
+
                     </p>
 
                 </div>
@@ -36,16 +34,12 @@
                     <i class="value_icon icon-basic-cloud "></i>
 
                     <p class="value_box_title">
-                        We Care About the Planet
+                        48-Hour Rain-Check Promise
                     </p>
 
                     <p class="value_box_subtitle">
-                        We Care About the Planet
-                          We Care About the Planet
-                            We Care About the Planet
-                              We Care About the Planet
-                                We Care About the Planet  We Care About the Planet
-
+                      One of the most frustrating things is having your windows clean only to have it rain the next day.
+                      That's why we are happy to come back and clean the exterior again for free if it rains within 48-hours of us cleaning the windows!
                     </p>
                 </div>
 
@@ -57,16 +51,12 @@
                 <div class="value_box">
                     <i class="value_icon icon-basic-world "></i>
                     <p class="value_box_title">
-                        We Care About the Planet
+                      A Passion for Service
                     </p>
 
                     <p class="value_box_subtitle">
-                        We Care About the Planet
-                          We Care About the Planet
-                            We Care About the Planet
-                              We Care About the Planet
-                                We Care About the Planet  We Care About the Planet
-
+                        Our team is always happy to be helping you! We view it as an honor to be chosen by you out of all the other companies and we will work hard to
+                        make you satified with our service. We promise to always make your windows spotless with a friendly smile!
                     </p>
 
                 </div>
@@ -80,16 +70,12 @@
                     <i class="value_icon icon-basic-gear "></i>
 
                     <p class="value_box_title">
-                        We Care About the Planet
+                      Flexible Schedule
                     </p>
 
                     <p class="value_box_subtitle">
-                        We Care About the Planet
-                          We Care About the Planet
-                            We Care About the Planet
-                              We Care About the Planet
-                                We Care About the Planet  We Care About the Planet
-
+                      We are aware of how busy businesses and residence are so we make it our top priorty to work around your schedule.
+                      Our team starts as early as 4 in the morning and even do cleanings in the afternoon and evening. We promise to make sure to work with your busy schedule and clean when it most convenient to you!
                     </p>
 
                 </div>
