--- a/views/user/layout/contact/what_we_do.ejs
+++ b/views/user/layout/contact/what_we_do.ejs
@@ -6,39 +6,43 @@
 
         <div class="row margin-top-small work_row">
 
-          <div class="col-6 mobile-col-12 landscape-col-6 work_col">
+          <div class="col-12  mobile-col-12 landscape-col-6 work_col">
 
-            <div class="width-100">
-              <img src = "./assets/images/what_we_do_1.png" class="work_image"/>
-              <p class="work_image_banner work_image_banner--left text-banner"> Screens</p>
+            <div class="work_image_container">
+              <div class="work_overlay"></div>
+              <div class="work_image  work_image--1"></div>
+              <p class="work_image_banner work_image_banner--left"> Screens</p>
             </div>
 
           </div>
 
-          <div class="col-6 mobile-col-12 landscape-col-6 work_col">
+          <div class="col-12 mobile-col-12 landscape-col-6 work_col">
+
+              <div class="work_image_container">
+                <div class="work_overlay"></div>
+                <div class="work_image  work_image--2"></div>
+                <p class="work_image_banner work_image_banner--right">Window Ledges</p>
+              </div>
+
+          </div>
+
+          <div class="col-12  mobile-col-12 landscape-col-6 work_col">
 
             <div class="work_image_container">
-              <img src = "./assets/images/what_we_do_2.png" class="work_image"/>
-              <p class="work_image_banner work_image_banner--right text-banner"> Window Ledges</p>
+              <div class="work_overlay"></div>
+              <div class="work_image  work_image--3"></div>
+              <p class="work_image_banner work_image_banner--left"> Window Panels</p>
             </div>
 
           </div>
 
-          <div class="col-6  mobile-col-12 landscape-col-6 work_col">
+          <div class="col-12 mobile-col-12 landscape-col-6 work_col">
 
-            <div class="work_image_container">
-              <img src = "./assets/images/what_we_do_3.png" class="work_image"/>
-              <p class="work_image_banner work_image_banner--left text-banner"> Window Panels</p>
-            </div>
-
-          </div>
-
-          <div class="col-6 mobile-col-12 landscape-col-6 work_col">
-
-            <div class="work_image_container">
-              <img src = "./assets/images/what_we_do_4.png" class="work_image"/>
-              <p class="work_image_banner work_image_banner--right text-banner">Window Frames</p>
-            </div>
+              <div class="work_image_container">
+                <div class="work_overlay"></div>
+                <div class="work_image  work_image--4"></div>
+                <p class="work_image_banner work_image_banner--right">Window Frames</p>
+              </div>
 
           </div>
 
