--- a/views/user/layout/head.ejs
+++ b/views/user/layout/head.ejs
@@ -17,17 +17,25 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@1,600&family=Work+Sans:wght@300&display=sw ap" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=Archivo+Black&family=Exo+2:wght@600&family=Exo:wght@800;900&family=Heebo:wght@800&family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,900;1,600&family=Noto+Sans:wght@300&family=Poppins:wght@600&family=Roboto+Condensed:wght@300;400&family=Roboto:ital,wght@0,300;1,100&family=Rubik+Distressed&family=Rubik+Moonrocks&family=Teko:wght@300;500&family=Vast+Shadow&family=Work+Sans:wght@200;300;400&display=swap" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="./assets/css/contact.css" />
       <link rel="stylesheet" type="text/css" href="./assets/css/cfs_modal.css" />
       <link rel="stylesheet" type="text/css" href="./assets/css/icon-font.css" />
       <link rel="stylesheet" type="text/css" href="./assets/css/navbar.css" />
       <link rel="stylesheet" type="text/css" href="./assets/css/mobile_navbar.css" />
+      <link rel="stylesheet" type="text/css" href=  "./assets/css/about.css" />
 
       <link rel="stylesheet" type="text/css" href= <%= showcase.css_file %> />
 
       <link rel="stylesheet" type="text/css" href="./assets/css/showcase.css" />
       <link rel="stylesheet" type="text/css" href="./assets/css/animations.css" />
+      <link rel="stylesheet" type="text/css" href="./assets/css/new_our_clients.css" />
+
       <link rel="stylesheet" type="text/css" href="./assets/css/top_clients.css" />
       <link rel="stylesheet" type="text/css" href="./assets/css/util.css" />
       <link rel="stylesheet" type="text/css" href="./assets/css/util_mobile.css" />
@@ -36,7 +44,7 @@
       <title><%= pageTitle %></title>
 
       <style>
-  
+
       </style>
 
     </head>
