--- a/views/user/layout/home/about.ejs
+++ b/views/user/layout/home/about.ejs
@@ -53,7 +53,7 @@
 
     <div class="col-1"></div>
 
-    <div class="col-6 desktop_only">
+    <div class="col-6 desktop_only margin-top-10">
 
         <div class="about_us_overlay_box"></div>
 
