--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -2,13 +2,14 @@ html{
     box-sizing: border-box
 }
 .about_container{
-  height:50vh;
   position: relative;
   padding-bottom:5%;
-  padding-top:0%;
+  padding-top:5%;
+  text-align: justify !important;
 }
 
 .value_row{
+
   background-image: linear-gradient(
       to right bottom,
       rgba(37, 98, 159, .7),
@@ -19,11 +20,13 @@ html{
   max-height:90vh;
 
 }
+
 .value_box:hover{
   transform: scale(1.1) translateY(-20px);
   transition: all .3s;
   background:  rgba(56, 182, 255,1);
 }
+
 .value_box:hover p{
   color:white !important;
 
@@ -45,25 +48,27 @@ html{
   font-size:2rem;
 }
 .value_box_title{
-  font-family:"Akrobat";
+  font-family:"Montserrat";
+  font-weight: 600;
   font-size:2rem;
   display: block;
 }
 .value_box_subtitle{
-  font-family:"Akrobat";
-  font-size:1.3rem;
+  font-family:"Montserrat";
+  font-weight: 400;
+  font-size:1.6rem;
+  text-align: justify;
   display: inline-block;
   margin-top:5%;
 }
 .value_box{
-  padding:5%;
+  padding:6%;
   transform: scale(1) translateY(0px);
   transition: all .3s;
   width:100%;
-  height:50vh;
   background:rgba(255, 255, 255,.7);
   box-shadow: 0rem 2rem 4rem black;
-  margin-top:10%;
+  margin-top:5%;
   text-align:  center;
 }
 
@@ -83,14 +88,20 @@ html{
       transition: all .5;
   display: inline-block;
 }
-.what_we_do_container{
-  height:700px !important;
-  position:relative;
-  background:url('./../images/showcase_2.png');
-  background-size:cover;
-  padding-bottom:60%;
-  padding-top:10%;
 
+.what_we_do_container{
+  position:relative;
+  background-image:linear-gradient(to right,rgba(0, 35, 50, 1),rgba(0, 35, 50, 1),rgba(0, 35, 50, .7),rgba(0, 35, 50, .4)),url('./../images/what_we_do_new.png');
+  background-size:cover;
+  padding:10% 0;
+  padding-top:5%;
+
+
+}
+
+a:hover{
+
+  pointer-events: none;
 }
 .what_we_do_col{
    padding-left:2.5%;
@@ -98,7 +109,6 @@ html{
 
 .what_we_do_title{
   color:white;
-  padding-top:10%;
   font-size:7rem;
   text-align:left;
    font-family:"Akrobat";
@@ -115,14 +125,20 @@ html{
    text-align:center;
 }
 .what_we_do_description{
-  color:white ;text-align:left; padding-top:5%; font-family: "Akrobat"
+  color:white ;
+  text-align:justify;
+  font-size: 2rem;
+   padding-top:5%;
+   font-family: "Montserrat";
+   font-weight: 300;
 }
 .about_title{
   color:white;
   text-align:center;
-  font-size:4rem;
-  padding-top:5%;
-  font-family:"Akrobat";
+  font-size:6rem;
+
+  font-family:"Montserrat";
+  font-weight: 700;
 }
 .value_box{
   height:100%;
@@ -130,10 +146,11 @@ html{
 
 
 .about_description{
-  font-family:"Akrobat";
+  font-family:"Montserrat";
+  font-weight: 400;
   color:white;
   padding-top:5%;
-  font-size:2.5rem;
+  font-size:3rem;
   text-align: center;
 
 }
