--- a/views/user/layout/contact/meet_the_owners.ejs
+++ b/views/user/layout/contact/meet_the_owners.ejs
@@ -1,4 +1,4 @@
-<div class="meet_owners_container">
+<div class="meet_owners_container"style="margin-top:0%;padding-top:10%">
 
     <div class="meet_owner_overlay"></div>
     <p class="text-banner meet_owner_banner">Meet the Owners </p>
