--- a/views/user/layout/new_showcase.ejs
+++ b/views/user/layout/new_showcase.ejs
@@ -4,11 +4,11 @@
 
       <div class="col-4 logo_col">
 
-          <div class="logo_container light-blue-background" >
-            <img src = "./assets/images/logo.png"class="width-100" />
+          <div class="logo_container " >
+            <img src = "./assets/images/logo.png" class="logo" />
           </div>
 
-          <div class="showcase_background turquoise-background">  </div>
+          <div class="showcase_background">  </div>
 
       </div>
 
@@ -16,21 +16,22 @@
 
       <div class="intro-text-container showcase_text_container">
 
-          <div class="cfs-heading-background cfs-heading-background--1">
-                <p class="cfs-heading"><%= showcase.heading_1 %></p>
-          </div>
-
-            <div class="cfs-heading-background cfs-heading-background--2" >
-                <p class="cfs-heading"><%= showcase.heading_2 %></p>
+        <div class="showcase_text_text_container">
+          <h1 class="cfs-heading-container">
+                <span class="cfs-heading cfs-heading-1"style="color:#38B6FF"><%= showcase.heading_1 %></span>
+                <div style="margin-top:5%"></div>
+                <span class="cfs-heading cfs-heading-2">
+                <%= showcase.heading_2 %>
+                </span>
+            </h1>
             </div>
-
         <div class="banners row relative">
 
             <div class="col-12">
 
               <div class='row relative'>
-                <div class="col-12 dark-blue-background padding-2 showcase_banner"></div>
-                <div class="col-9 padding-2 light-blue-background showcase_banner"></div>
+                <div class="col-12 dark-blue-background padding-2 showcase_banner showcase_banner--1"></div>
+                <div class="col-5 padding-2 light-blue-background showcase_banner showcase_banner--2"></div>
               </div>
 
           </div>
@@ -39,7 +40,7 @@
     </div>
 
   <div class="showcase_image_container">
-      <img src ='<%= showcase.showcase_img %>' class="width-100 showcase_image" style="height:100vh" id="mobile_showcase"/>
+      <!-- <img src ='<%= showcase.showcase_img %>' class="width-100 showcase_image" id="mobile_showcase"/> -->
   </div>
-
+  <div class="showcase_number">480-822-0511</div>
 </div>
